fix(Announcement page): Fixed the announcement search field and alignment issues

--- a/public/temp-css/dashboard.css
+++ b/public/temp-css/dashboard.css
@@ -4506,20 +4506,28 @@ ul.profil_statut li span.verified:before {
     -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.3);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.3)
 }
-.home-search-submit {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 57px;
+
+.anoucement-search-input {
+    padding: 17px 77px 17px 23px;
+    width: 100%;
+    font-size: 16px;
     border-width: 0;
-    -webkit-border-top-right-radius: 5px;
-    border-top-right-radius: 5px;
-    -webkit-border-bottom-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    background-color: #0da5fd;
-    -webkit-transition: background-color 0.2s ease-in;
-    transition: background-color 0.2s ease-in
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.3)
+
+}
+
+.home-search-submit {
+    display: inline-block;
+    transition: background-color 0.2s ease-in;
+    padding: 18px;
+}
+.anouncement-field-wrapper {
+    display: inline-block;
+    width: calc(100% - 120px);
+    margin-right: 10px;
 }
 .home-search-submit:before {
     content: '';
